@@ -1,0 +1,5 @@
+;16 bit file descriptor format. though this will probably only be used in protected mode it's still good
+;to have the compattablity list for older devices.
+[BITS 16]
+
+SECTION .execution_dep
