@@ -1,10 +1,9 @@
 Osmium Kernel
 =============
 
-The goal of this project is to give the general public access to a versatile kernel that is configurable for *any* device, this is to include exceptionally old hardware that only computer enthusiasts own or perhaps even museums in the future. To be more specific though, anything that needs real-mode to run...
+####Target Systems:
+x86_64
+any system users want me to support...
 
-It is also my goal to use this kernel in -Project Dynamo-, an opperating system a few friends an I are throwing together for the lot of you. Which also has the goal of appealing to every system, not just new hardware (as good as new hardware is!).
-
-Until this project goes up on the Darklight Dev Team site when we actually get to starting Project Dynamo, I'll try and keep the changelog up to date :P
-
+###Goals:
 
